HBASE-28832 Fixed body horizontally being too large

--- a/hbase-server/src/main/resources/hbase-webapps/static/css/hbase.css
+++ b/hbase-server/src/main/resources/hbase-webapps/static/css/hbase.css
@@ -19,8 +19,7 @@
 /* General styling */
 body { padding-top: 50px; }
 html .content {
-  margin-left: 2.0em;
-  margin-right: 2.0em;
+  padding: 0 2.0em;
 }
 .navbar-brand img {
   margin-top: -7px;
